// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable (snapshot) renders empty data table (no results row) 1`] = `
<div>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center gap-2 py-4"
    >
      <svg
        class="lucide lucide-search"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <path
          d="m21 21-4.3-4.3"
        />
      </svg>
      <input
        class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-12"
        placeholder="Search by name"
        value=""
      />
    </div>
    <div
      class="flex gap-x-2"
    />
  </div>
  <div
    class="rounded-lg border bg-background"
  >
    <div
      class="relative w-full overflow-auto"
    >
      <table
        class="w-full caption-bottom text-sm"
      >
        <thead
          class="[&_tr]:border-b"
        >
          <tr
            class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
          >
            <th
              class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
        >
          <tr
            class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 h-24 text-center"
              colspan="1"
            >
              No Results.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`DataTable (snapshot) renders populated data table with 2 rows 1`] = `
<div>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center gap-2 py-4"
    >
      <svg
        class="lucide lucide-search"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
        />
        <path
          d="m21 21-4.3-4.3"
        />
      </svg>
      <input
        class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm h-12"
        placeholder="Search by name"
        value=""
      />
    </div>
    <div
      class="flex gap-x-2"
    />
  </div>
  <div
    class="rounded-lg border bg-background"
  >
    <div
      class="relative w-full overflow-auto"
    >
      <table
        class="w-full caption-bottom text-sm"
      >
        <thead
          class="[&_tr]:border-b"
        >
          <tr
            class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
          >
            <th
              class="h-12 px-4 text-left align-middle font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
        >
          <tr
            class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            data-state="false"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 max-w-[400px] break-words"
            >
              Alpha
            </td>
          </tr>
          <tr
            class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            data-state="false"
          >
            <td
              class="p-4 align-middle [&:has([role=checkbox])]:pr-0 max-w-[400px] break-words"
            >
              Bravo
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
